# ceramicraft-notification-mservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  pyproject.toml  serve.py  sonar-project.properties
.github/workflows/: deploy.yml  lint.yml  release.yml  snyk.yml  sonar.yml  test.yml  trivy.yml
postgres/: notification_db.sql
protos/: notification.proto
src/ceramicraft_notification_mservice/: __init__.py  config.py  crypto.py  fcm.py  py.typed  service.py
src/ceramicraft_notification_mservice/http/: router.py
src/ceramicraft_notification_mservice/http/static/: swagger-init.js
src/ceramicraft_notification_mservice/models/: device_token.py
src/ceramicraft_notification_mservice/pb/: notification_pb2.py  notification_pb2.pyi  notification_pb2_grpc.py
tests/: conftest.py  test_config.py  test_fcm.py  test_http.py  test_service.py
